--- a/cms/page.css
+++ b/cms/page.css
@@ -2,13 +2,11 @@ h1{
 	text-align:center;
 }
 .card {
-	display:block;
-	height:100px;
-    width: 200px;
+	display:inline-block;
 	margin:1px;
 	border-style: solid;
-	border-width: 0px 0px 0px 5px;
-	overflow:hidden;
+	border-width: 1px 1px 1px 5px;
+	overflow:scroll;
 	padding: 10px;
 }
 
@@ -18,6 +16,5 @@ h1{
 }
 
 .pageCont {
-	overflow:hidden;
 	margin:5px;
 }
