--- a/cms/style/login.css
+++ b/cms/style/login.css
@@ -1,12 +1,7 @@
-/*-------------------------------------------------------+
-| Content Management System 
-| http://www.phphelptutorials.com/
-+--------------------------------------------------------+
-| Author: David Carr  Email: dave@daveismyname.com
-+--------------------------------------------------------+*/
-
 body {
-	background:#e0e0e0;
+	background-image:url("business.jpg");
+    background-repeat: no-repeat;
+	background-position: 100% 0%;
 	margin:0 auto 0;
 	padding:0;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
@@ -18,60 +13,98 @@ div.lwidth {
 	width:500px;
 	margin:80px auto 0;
 	padding:0;
-	background:#FFFFFF;
+	background-color:transparent;
 }
 
 /* default forms */
 form input, form textarea, select {
-	border:1px solid #999999;
+	border:1px solid #000;
 	border-bottom-color:#cccccc;
 	border-right-color:#cccccc;
 	padding:5px;
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:1.0em;
 	margin:2px;
+	color:#000;
 }
 
 form input.button {
-	background:#0D7ABF none repeat-x scroll bottom left;
-	color:#ffffff;
-	border:1px solid #00F;
-	color:#ffffff;
-	font-size:0.8em;
-	padding:6px 14px;
-	font-weight:bold;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-}
+   border: 1px solid #2c4d61;
+   background: #004675;
+   background: -webkit-gradient(linear, left top, left bottom, from(#577fc2), to(#004675));
+   background: -webkit-linear-gradient(top, #577fc2, #004675);
+   background: -moz-linear-gradient(top, #577fc2, #004675);
+   background: -ms-linear-gradient(top, #577fc2, #004675);
+   background: -o-linear-gradient(top, #577fc2, #004675);
+   background-image: -ms-linear-gradient(top, #577fc2 0%, #004675 100%);
+   padding: 5px 9px;
+   -webkit-border-radius: 3px;
+   -moz-border-radius: 3px;
+   border-radius: 3px;
+   -webkit-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+   -moz-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+   box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+   text-shadow: #427899 0 1px 0;
+   color: #000000;
+   font-size: 14px;
+   font-weight:bold;
+   font-family: helvetica, serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+form input.button:hover {
+   border: 1px solid #0a3c59;
+   text-shadow: #1e4158 0 1px 0;
+   background: #3e779d;
+   background: -webkit-gradient(linear, left top, left bottom, from(#65a9d7), to(#3e779d));
+   background: -webkit-linear-gradient(top, #65a9d7, #3e779d);
+   background: -moz-linear-gradient(top, #65a9d7, #3e779d);
+   background: -ms-linear-gradient(top, #65a9d7, #3e779d);
+   background: -o-linear-gradient(top, #65a9d7, #3e779d);
+   background-image: -ms-linear-gradient(top, #65a9d7 0%, #3e779d 100%);
+   color: #fff;
+   }
+form input.button:active {
+   text-shadow: #1e4158 0 1px 0;
+   border: 1px solid #0a3c59;
+   background: #65a9d7;
+   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#3e779d));
+   background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
+   background: -moz-linear-gradient(top, #3e779d, #65a9d7);
+   background: -ms-linear-gradient(top, #3e779d, #65a9d7);
+   background: -o-linear-gradient(top, #3e779d, #65a9d7);
+   background-image: -ms-linear-gradient(top, #3e779d 0%, #65a9d7 100%);
+   color: #fff;
+   }
 
 label {
 	float:left;
 	margin-right:10px;
-	width:180px;
-	font-weight:bold;	
+	font-weight:bold;
+	color:#000;
 	}
 /* content */
 div.page-wrap {
-	padding:20px;
+	padding: 29px;
 	clear:both;
-	background-color:#fff;
 }
 
 div.content {
+	border-radius:20px;
+	margin-top: 100px;
 	float:left;
 	width:100%;
-	padding-right:20px;
+	padding:20px;
 	font-size:90%;
+	background-color:#efefef;
+	opacity:0.8;
+	font:#000 bold;
 }
 
-/* footer */
-div.footer {
-	background:none repeat scroll 0 0 #262626;
-	clear:both;
-	color:#FFFFFF;
-	padding:10px;
-	text-align:center;
+h2,p {
+	color:#000;
+	font-weight:bold;
 }
-
 
 /* MESSAGES */
 .msg-info, .msg-atten, .msg-ok, .msg-error { margin:3px 0; padding:10px 10px 10px 40px; -moz-border-radius:5px; -webkit-border-radius:5px; }
